--- a/css/style.css
+++ b/css/style.css
@@ -9,3 +9,88 @@ cores img :
 #8F8F8F - 2 --> // #FF4D4D - 2a // #1B3A24 - 2b // #4F2B2B - 2c
 #323232 - 3 --> // #58316C - 3a // #8F5DA8 - 3b // #819345 - 3c
 */
+
+/* Mobile First */  
+
+:root {
+
+    /* Cores */
+    --cor-principal: #E8E8E8;
+    --cor-secundaria: #8F8F8F;
+    --cor-terciaria: #323232;
+
+    --cor-secA: #FF4D4D;
+    --cor-secB: #1B3A24;
+    --cor-secC: #4F2B2B;
+
+    --cor-terA: #58316C;
+    --cor-terB: #8F5DA8;
+    --cor-terC: #819345;
+
+    /* Fontes */
+    
+    --fonte-principal: Arial, Helvetica, sans-serif;
+    --fonte-secundaria: 'Courier New', Courier, monospace
+
+}
+
+* {
+    margin: 0px;
+    padding: 0px;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    box-sizing: border-box;
+}
+
+body, html {
+    background-color: var(--cor-terA);
+    height: 100vh;
+    width: 100vw;
+}
+
+main {
+    position: relative;
+    height: 100vh;
+    width: 100vw;
+}
+
+section#login {
+    background-color: var(--cor-secundaria);
+    width: 300px;
+    height: 550px;
+    border-radius: 20px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    overflow: hidden;
+    box-shadow: 3px 3px 10px #00000073;
+}
+
+div{ 
+    display: block;
+}
+
+section#login > div#imagem {
+    background: var(--cor-terA) url(../imagens/pexels-img-login-atualizada.jpg) no-repeat;
+    background-size: cover;
+    background-position: center top;
+    height: 220px; 
+}
+
+section#login > div#formulario h1 {
+    padding: 10px;
+    text-align: center;
+    font-weight: 900;
+    color: var(--cor-terB);
+    text-shadow: 1px 1px 2px #000000;
+}
+
+section#login > div#formulario p {
+    padding: 0px 10px 10px 10px;
+    margin: 0px 10px 10px 10px;
+    text-align: justify;
+    font-size: 0.9em;
+    color: var(--cor-terciaria);
+    text-indent: 20px;
+    line-height: 1.2em;
+}
