--- a/css/midias.css
+++ b/css/midias.css
@@ -9,7 +9,7 @@ orientation: portrait => Em pé == Retrato
 pequenas telas: ate 600px
 max-width: 600px
 
-celular: 600px - 769px
+celular: 600px - 768px
 min-width: 600px max-width: 768px
 
 tablet: 768px- 992px
@@ -44,7 +44,7 @@ min-width: 1200px
 
 }
 
-@media screen and (max-width: 950px) and (orientation: landscape){
+@media screen and (max-width: 992px) and (orientation: landscape) {
     section#login {
         background-color: var(--cor-secundaria);
         width: 550px;
@@ -62,6 +62,8 @@ min-width: 1200px
         float: right;
         width: 35%;
         height: 100vh;
+        background-size: cover;
+        background-position: right center;
     }
 
     section#login > div#formulario {
@@ -72,7 +74,7 @@ min-width: 1200px
 }
 
 @media screen and (min-width: 768px) and (max-width: 992px) {
-    body {
+    body, html {
         background-image: linear-gradient(to bottom, var(--cor-secC), var(--cor-terA), var(--cor-terB));
     }
     section#login {
