--- a/css/style.css
+++ b/css/style.css
@@ -94,3 +94,19 @@ section#login > div#formulario p {
     text-indent: 20px;
     line-height: 1.2em;
 }
+
+span {
+    background-color: var(--cor-terB);
+    margin-left: 20px;
+    border: 1px solid black;
+    padding: 5px;
+}
+
+span#boneco {
+    border-radius: 50%;
+    margin-bottom: 20px;
+}
+
+span#chave {
+    border-radius: 50%;
+}
