--- a/css/style.css
+++ b/css/style.css
@@ -98,15 +98,91 @@ section#login > div#formulario p {
 span {
     background-color: var(--cor-terB);
     margin-left: 20px;
-    border: 1px solid black;
+    border: 1px solid #000000;
     padding: 5px;
 }
 
 span#boneco {
     border-radius: 50%;
-    margin-bottom: 20px;
+    margin-bottom: 10px;
+    transition: .4s;
+}
+
+span#boneco:hover {
+    background-color: var(--cor-terA);
+    cursor: pointer;
+    box-shadow: 1px 1px 10px #0000008c;
 }
 
 span#chave {
     border-radius: 50%;
+    transition: .4s;
+}
+
+span#chave:hover {
+    background-color: var(--cor-terA);
+    cursor: pointer;
+    box-shadow: 1px 1px 10px #0000008c;
+}
+
+input.entrar {
+    margin: 10px auto;
+    padding: 7px;
+    width: 100%;
+    text-align: center;
+    background-color: var(--cor-terB);
+    border: 0.5px solid #00000060;
+    font-size: 1.1em;
+    transition: .3s;
+    border-radius: 1px;
+}
+
+input.entrar:hover {
+    background-color: var(--cor-terA);
+    cursor: pointer;
+    color: var(--cor-principal);
+    box-shadow: 1px 1px 10px #0000008c;
+}
+
+a.esqueci-senha {
+    display: block;
+    margin: 10px auto;
+    text-decoration: none;
+    width: 40%;
+    background-color: var(--cor-terC);
+    color: var(--cor-terA);
+    border: 1px solid var(--cor-terA);
+    padding: 5px;
+    border-radius: 10px;
+    font-size: 0.8em;
+    font-weight: 650;
+    text-align: center;
+}
+
+a.esqueci-senha:hover {
+    background-color: var(--cor-terA);
+    border: 1px solid var(--cor-terC);
+    color: var(--cor-terC);
+    transition: .3s;
+    box-shadow: 1px 1px 10px #0000008c;
+}
+
+input#ilogin, input#isenha {
+    width: 70%;
+    height: 4vh;
+    background-color: var(--cor-principal);
+    border: 1px solid #000000b6;
+    border-radius: 10px;
+    padding: 10px;
+    margin: 1px;
+    transition: .4s;
+    transition-timing-function: ease;
+    
+}
+
+input#ilogin:hover, input#isenha:hover {
+    border: 1px solid #000000;
+    background-color: var(--cor-terciaria);
+    box-shadow: 1px 1px 10px #0000008c;
+    
 }
